--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^5.8.33",
+    "babel-loader": "^5.3.3",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   }
