--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "devDependencies": {
     "babel-core": "^5.8.33",
     "babel-loader": "^5.3.3",
+    "chai": "^3.4.0",
+    "chai-immutable": "^1.4.0",
+    "jsdom": "^7.0.2",
+    "mocha": "^2.3.3",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
+  },
+  "dependencies": {
+    "immutable": "^3.7.5"
   }
 }
