--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "immutable": "^3.7.5",
     "react": "^0.14.1",
-    "react-dom": "^0.14.1"
+    "react-addons-pure-render-mixin": "^0.14.1",
+    "react-dom": "^0.14.1",
+    "react-router": "^1.0.0-rc3"
   }
 }
